Update app.json to start with web dyno 1x

--- a/app.json
+++ b/app.json
@@ -4,6 +4,12 @@
   "keywords": [
     "airflow"
   ],
+  "formation": {
+    "web": {
+      "quantity": 1,
+      "size": "standard-1x"
+    }
+  },
   "addons": [
     "heroku-postgresql:standard-0"
   ],
